# vcsbeam

./: .gitignore  00__Mainpage_8md.html  01__Definitions_8md.html  02__Calibration_8md.html  03__Beamforming_8md.html  04__FileFormats_8md.html  Applications__FinePFBOffline_8md.html  Applications__MWAPlotCalibration_8md.html  Applications__MWATiedArrayBeamPSF_8md.html  Applications__MWATrackPrimaryBeamResponse_8md.html  Applications__MakeMWAIncohBeam_8md.html  Applications__MakeMWATiedArrayBeam_8md.html  Applications__OfflineCorrelator_8md.html  Beamforming_8md.html  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.NVIDIA  Calibration_8md.html  Definitions_8md.html  FileFormats_8md.html  Installation_8md.html  Mainpage_8md.html  README.md  UsersGuide__Beamforming_8md.html  UsersGuide__Calibration_8md.html  UsersGuide__Examples_8md.html  UsersGuide__Overview_8md.html  _formulas.tex  applicationsfinepfboffline.html  applicationsmakemwaincohbeam.html  applicationsmakemwatiedarraybeam.html  applicationsmwaplotcalibration.html  applicationsmwatiedarraybeampsf.html  applicationsmwatrackprimarybeamresponse.html  applicationsofflinecorrelator.html  beam__psrfits_8c.html  beam__psrfits_8c__incl.map  beam__psrfits_8c__incl.md5  beam__vdif_8c.html  beam__vdif_8c__incl.map  (+130 more)
.github/workflows/: main.yml
app/: CMakeLists.txt  CMakeLists.txt.NVIDIA  fine_pfb_offline.c  make_mwa_incoh_beam.c  make_mwa_tied_array_beam.c  mwa_plot_calibration.c  mwa_tied_array_beam_psf.c  mwa_track_primary_beam_response.c  mwax_incoh.c
cmake/Modules/: FindHYPERBEAM.cmake  FindMWALIB.cmake  FindPAL.cmake  FindPSRFITS_UTILS.cmake  FindVDIFIO.cmake
doc/: 00_Mainpage.md  01_Definitions.md  02_Calibration.md  04_FileFormats.md  05_UsersGuide.md  ANTENNA_ORDER.md  Applications_FinePFBOffline.md  Applications_MWAPlotCalibration.md  Applications_MWATiedArrayBeamPSF.md  Applications_MWATrackPrimaryBeamResponse.md  Applications_MakeMWAIncohBeam.md  Applications_MakeMWATiedArrayBeam.md  Applications_OfflineCorrelator.md  Beamforming.md  Calibration.md  Definitions.md  Doxyfile  FileFormats.md  Installation.md  Mainpage.md  Makefile  README.md  UsersGuide_ApplyCalibration.md  UsersGuide_Beamforming.md  UsersGuide_Calibration.md  UsersGuide_Examples.md  UsersGuide_HelloWorld.md  UsersGuide_Overview.md  vcsbeam_documentation.bib  vcsbeam_documentation.tex
doc/images/: beamforming.dot  calibration.dot  channelisation.dot  overview.dot
examples/applycal/: Makefile  applycal.c
examples/helloworld/: Makefile  helloworld.c
include/: vcsbeam.h  vcsbeam.h.in  vcsbeam_private.h.in
offline_correlator/: CMakeLists.txt  corr_utils.c  corr_utils.h  offline_correlator.c
pfb_filter/: README.md
sandbox/: Makefile  tensors.h  units  units.cpp  units.h  units_test.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  (+26 more)
src/: CMakeLists.txt  CMakeLists.txt.NVIDIA  CMakeLists.txt.original  beam_filterbank.c  beam_psrfits.c  beam_psrfits.h  beam_vdif.c  buffer.c  calibration.c  filter.c  form_beam.cpp  form_beam.cu  geometry.c  gpu_fft.hpp  gpu_includes.h  gpu_macros.c  gpu_macros.h  jones.c  jones.h  metadata.c  mwa_header.h  performance.c  pfb.cpp  pfb.cu  primary_beam.c  primary_beam.h  vcsbeam.h
utils/: CMakeLists.txt  plot_calibration.py  pol_correction.py  print_metafits_inputs.py  rts_flag_ant_to_tilenames.py
